# antara-std

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: antara.cmake  antara.compiler.targets.cmake  version.hpp.in
include/antara/config/: config.hpp
test/: CMakeLists.txt  antara.tests.cpp
test/config/: antara.tests.config.version.cpp
